[package]
name = "polygon-io-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-web-socket-client = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-web-socket-client" }
tokio = { version = "1.22.0", features = ["full"] }
async-trait = "*"
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }